html added buttons
added light/darkmode switch and help for controls

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button id="helpButton">?</button>
+    <div id="helpOverlay">
+      <h3>Steuerung</h3>
+      <ul>
+        <li><b>R</b> – Neues Ziel (Randomisieren)</li>
+        <li><b>Q</b> – Zurücksetzen</li>
+        <li><b>W / S</b> – Slider wechseln</li>
+        <li><b>A / D</b> – Wert des Sliders ändern</li>
+        <li><b>E</b> – Slider ein-/ausklappen</li>
+        <li><b>H</b> – Info zum rechten Canvas</li>
+      </ul>
+      <p>Du kannst alle Slider auch normal mit der Maus bedienen.</p>
+    </div>
+    
+    <button id="themeToggle">☾</button>
     <div id="controls">
         <button id="randomizeButton">Randomisieren!</button>
         <hr>
@@ -67,3 +82,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
