Update index.html - added collapse button for side menu

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     
     <button id="themeToggle">☾</button>
     <div id="controls">
+        <button id="collapseButton" title="Slider ein-/ausklappen">▴</button>
         <button id="randomizeButton">Randomisieren!</button>
         <hr>
         <div>
@@ -82,4 +83,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
