Update index.html - added rotation slider and animation menu

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
             <label for="nLevelBranches">Verzweigung:</label>
             <input type="range" id="nLevelBranches" min="0" max="2" step="1" value="2">
         </div>
+        <div>
+            <label for="rotation">Rotation:</label>
+            <input type="range" id="rotation" min="-180" max="180" step="5" value="0">
+        </div>
     </div>
 
     <div id="successMessage">TREFFER!</div>
@@ -76,12 +80,79 @@
             <li><b>A / D</b> – Wert des gewählten Sliders ändern</li>
             <li><b>E</b> – Slider ein-/ausklappen</li>
             <li><b>H</b> – Infos zum rechten Canvas ein-/ausblenden</li>
-            <li><b>Touch</b> – Swipe oben/unten/links/rechts, 2×Tippen=Reset, 3×Tippen=Random</li>
+            <li><b>Touch</b> – Swipe oben/unten/links/rechts, 2×Tippen = Reset, 3×Tippen = Random</li>
         </ul>
         <p>Du kannst alle Slider auch mit der Maus bedienen.</p>
     </div>
 
     <button id="themeToggle" title="Light/Dark Mode umschalten">☾</button>
+
+    <!-- Animation-Menü -->
+    <button id="animationToggle" title="Animationsmenü ein-/ausblenden">Anim</button>
+    <div id="animationMenu">
+        <h3>Animation</h3>
+        <p>Häkchen = Slider automatisch bewegen.</p>
+        <div class="anim-row" data-slider-id="spread">
+            <span class="anim-label">Streuung</span>
+            <input type="checkbox" class="anim-enable">
+            <input type="range" min="1" max="3" step="1" value="1" class="anim-speed">
+            <span class="anim-speed-label">Langsam</span>
+        </div>
+        <div class="anim-row" data-slider-id="sides">
+            <span class="anim-label">Seiten</span>
+            <input type="checkbox" class="anim-enable">
+            <input type="range" min="1" max="3" step="1" value="1" class="anim-speed">
+            <span class="anim-speed-label">Langsam</span>
+        </div>
+        <div class="anim-row" data-slider-id="levels">
+            <span class="anim-label">Tiefe</span>
+            <input type="checkbox" class="anim-enable">
+            <input type="range" min="1" max="3" step="1" value="1" class="anim-speed">
+            <span class="anim-speed-label">Langsam</span>
+        </div>
+        <div class="anim-row" data-slider-id="scale">
+            <span class="anim-label">Skalierung</span>
+            <input type="checkbox" class="anim-enable">
+            <input type="range" min="1" max="3" step="1" value="1" class="anim-speed">
+            <span class="anim-speed-label">Langsam</span>
+        </div>
+        <div class="anim-row" data-slider-id="lineWidth">
+            <span class="anim-label">Linienbreite</span>
+            <input type="checkbox" class="anim-enable">
+            <input type="range" min="1" max="3" step="1" value="1" class="anim-speed">
+            <span class="anim-speed-label">Langsam</span>
+        </div>
+        <div class="anim-row" data-slider-id="lineLength">
+            <span class="anim-label">Länge</span>
+            <input type="checkbox" class="anim-enable">
+            <input type="range" min="1" max="3" step="1" value="1" class="anim-speed">
+            <span class="anim-speed-label">Langsam</span>
+        </div>
+        <div class="anim-row" data-slider-id="branching">
+            <span class="anim-label">Äste</span>
+            <input type="checkbox" class="anim-enable">
+            <input type="range" min="1" max="3" step="1" value="1" class="anim-speed">
+            <span class="anim-speed-label">Langsam</span>
+        </div>
+        <div class="anim-row" data-slider-id="hue">
+            <span class="anim-label">Farbton</span>
+            <input type="checkbox" class="anim-enable">
+            <input type="range" min="1" max="3" step="1" value="1" class="anim-speed">
+            <span class="anim-speed-label">Langsam</span>
+        </div>
+        <div class="anim-row" data-slider-id="nLevelBranches">
+            <span class="anim-label">Verzweigung</span>
+            <input type="checkbox" class="anim-enable">
+            <input type="range" min="1" max="3" step="1" value="1" class="anim-speed">
+            <span class="anim-speed-label">Langsam</span>
+        </div>
+        <div class="anim-row" data-slider-id="rotation">
+            <span class="anim-label">Rotation</span>
+            <input type="checkbox" class="anim-enable">
+            <input type="range" min="1" max="3" step="1" value="1" class="anim-speed">
+            <span class="anim-speed-label">Langsam</span>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
